User Login was added and tested
